--- a/app/assets/stylesheets/one-page-wonder.css
+++ b/app/assets/stylesheets/one-page-wonder.css
@@ -8,7 +8,7 @@
     display: block;
     width: 100%;
     text-align: center;
-    background: url('http://placehold.it/1900x500') no-repeat center center scroll;
+    background: url('zaluna.png') no-repeat center center ;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -19,16 +19,17 @@
     padding: 120px 0;
 }
 
+
 .headline h1 {
     font-size: 130px;
     background: #fff;
-    background: rgba(255,255,255,0.9);
+    background: rgba(255,255,255,0.7);
 }
 
 .headline h2 {
-    font-size: 77px;
+    font-size: 50px;
     background: #fff;
-    background: rgba(255,255,255,0.9);
+    background: rgba(255,255,255,0.7);
 }
 
 .featurette-divider {
