--- a/app/assets/stylesheets/one-page-wonder.css
+++ b/app/assets/stylesheets/one-page-wonder.css
@@ -8,7 +8,7 @@
     display: block;
     width: 100%;
     text-align: center;
-    background: url('/assets/zaluna.png') no-repeat center center ;
+    background: url('zaluna.png') no-repeat center center ;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
