--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -51,11 +51,19 @@ section {
   padding-top: 30px;
   max-width: 320px;
   margin: 0 auto;
+  background: white !important;
+  border: 1px solid white !important;
+  -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.0)!important;
+    box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.0)!important;
 }
 .authform form {
   @extend .well;
   @extend .well-lg;
   padding-bottom: 40px;
+  background: white !important;
+  border: 1px solid white !important;
+  -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.0)!important;
+    box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.0)!important;
 }
 .authform .right {
   float: right !important;
