--- a/app/views/layouts/_nav_links_for_auth.html.erb
+++ b/app/views/layouts/_nav_links_for_auth.html.erb
@@ -3,7 +3,7 @@
   <li><%= link_to 'Sign out', main_app.destroy_user_session_path, :method=>'delete' %></li>
 <% else %>
   <li><%= link_to 'Sign in', main_app.new_user_session_path %></li>
-  <li><%= link_to 'Sign up', main_app.new_user_registration_path %></li>
+  <li><%= link_to 'Sign up', main_app.pricing_path %></li>
   <li><%= link_to 'Pricing', main_app.pricing_path %></li>
 <% end %>
 <% if user_signed_in? %>
