--- a/app/views/layouts/_nav_links_for_auth.html.erb
+++ b/app/views/layouts/_nav_links_for_auth.html.erb
@@ -1,5 +1,5 @@
  <% if user_signed_in? %>
-  <li><%= link_to 'Edit account', main_app.edit_user_registration_path %></li>
+  <li><%= link_to 'Edit account', koudoku.owner_subscriptions_path(current_user) %></li>
   <li><%= link_to 'Sign out', main_app.destroy_user_session_path, :method=>'delete' %></li>
 <% else %>
   <li><%= link_to 'Sign in', main_app.new_user_session_path %></li>
